# zztest

./: .clang-format  CMakeLists.txt  README.md
check/: CMakeLists.txt  zzcheck.c  zzcheck.inl
include/: zztest.h
make/: Makefile.wcc
metatest/: CMakeLists.txt  metatest.cpp
src/: zztest.c
